Fix: visibility of deposit remarks in print/preview and align company seal to signature line

--- a/ChZ_Room/GHN168/style.css
+++ b/ChZ_Room/GHN168/style.css
@@ -955,7 +955,7 @@ textarea.form-control {
   position: absolute;
   width: 180px;
   height: auto;
-  top: 45%;
+  top: 45px;
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: 0.82;
